--- a/day3_reading_journal.ipynb
+++ b/day3_reading_journal.ipynb
@@ -20,7 +20,47 @@
    "source": [
     "## [Chapter 8](http://www.greenteapress.com/thinkpython/html/thinkpython009.html)\n",
     "\n",
-    "Note: the exercise numbers below match up with the reading for ease of cross referencing."
+    "#### 8.1\n",
+    "1. A string is a sequence of characters\n",
+    "2. A single character is assigned an integer index and can be accessed\n",
+    "3. the first character's index is 0\n",
+    "\n",
+    "#### 8.2\n",
+    "1. len is a function that returns the length of a string\n",
+    "2. syntax is len(string)\n",
+    "\n",
+    "#### 8.3\n",
+    "1. a traversal is the pattern of processing in which a function proccesses a string one character at a time\n",
+    "\n",
+    "#### 8.4\n",
+    "1. a slice is a segment of a string\n",
+    "2. the function string[n:m] returns the portion of the string between the indicies n through m\n",
+    "\n",
+    "#### 8.5\n",
+    "1. strings cannot be changed after they have been created or they are immutable\n",
+    "2. the best thing to do is to create a new string\n",
+    "\n",
+    "#### 8.6\n",
+    "1. a searching function will traverse through a string for a certain letter\n",
+    "2. looks to see if the index of a specific string is equal to the letter\n",
+    "\n",
+    "#### 8.7\n",
+    "1. a counter function will traverse through a string and count the number of instances a specific letter appears\n",
+    "2. the counter will use a loop to traverse through each index within a string\n",
+    "\n",
+    "#### 8.8\n",
+    "1. string.upper() will translate each character within a string to uppercase\n",
+    "2. a method call uses dot notation or invocation\n",
+    "3. string.find('character') searches a string for the the inputted character and will return 1 if it is in the string and will return 0 if it is not in the string\n",
+    "\n",
+    "#### 8.9\n",
+    "1. the in operator takes two strings and returns true if the first one is within the second string\n",
+    "2. syntax is 'string1' in 'string2'\n",
+    "\n",
+    "#### 8.10\n",
+    "1. strings can alse be compared with the == operator\n",
+    "2. string can also be compared with <, > which can be helpful for putting words into alphabetical order\n",
+    "3. strings have integer values assigned to their individual characters"
    ]
   },
   {
@@ -34,12 +74,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n",
+      "l\n",
+      "l\n",
+      "e\n",
+      "h\n"
+     ]
+    }
+   ],
+   "source": [
+    "def backwards(string):\n",
+    "    for x in range(0, len(string)):\n",
+    "        print string[len(string)-1-x]\n",
+    "        \n",
+    "        \n",
+    "backwards('hello')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,9 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -65,12 +124,18 @@
     "    >>> pig_latin(\"software\")\n",
     "    'oftwaresay'\n",
     "    \"\"\"\n",
+    "    new_word = word[1:] + word[0] + 'ay'\n",
+    "    return new_word\n",
+    "    \n",
     "    pass #TODO: Implement me\n",
+    "\n",
+    "#pig_latin('software')\n",
+    "\n",
     "\n",
     "# If you'd like to actually run the doctests here, you can uncomment the lines below.\n",
     "# We use this slightly more complex method to test only the pig_latin function, without running tests on any other functions that may be in this notebook.\n",
-    "#import doctest\n",
-    "#doctest.run_docstring_examples(pig_latin, globals())"
+    "import doctest\n",
+    "doctest.run_docstring_examples(pig_latin, globals())"
    ]
   },
   {
@@ -83,12 +148,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count(word, letter):\n",
+    "    count = 0\n",
+    "    for x in word:\n",
+    "        if x == letter:\n",
+    "            count = count + 1\n",
+    "    return count\n",
+    "\n",
+    "count('jello', 'l')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,12 +185,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EXPERIMENT\n",
+      "1\n",
+      "jiggly\n",
+      "birthday\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test():\n",
+    "    print 'experiment'.upper()\n",
+    "    print 'happy'.find('a')\n",
+    "    print 'JIGGLY'.lower()\n",
+    "    print '    birthday    '.strip()\n",
+    "    \n",
+    "test()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,18 +222,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def any_lowercase1(s):\n",
     "    for c in s:\n",
     "        if c.islower():\n",
     "            return True\n",
     "        else:\n",
-    "            return False"
+    "            return False\n",
+    "        \n",
+    "any_lowercase1('PaPAYA')        \n",
+    "# this function attempts to traverse through each index within string s \n",
+    "# and determine whether each character is lowercase\n",
+    "# This function does not work because it only determines the first character\n",
+    "# the function will immediately return true or false after determining\n",
+    "# what the first character is"
    ]
   },
   {
@@ -141,18 +263,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'True'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def any_lowercase2(s):\n",
     "    for c in s:\n",
     "        if 'c'.islower():\n",
     "            return 'True'\n",
     "        else:\n",
-    "            return 'False'"
+    "            return 'False'\n",
+    "        \n",
+    "any_lowercase2('Papaya')\n",
+    "# This function attempts to do the same as the function above\n",
+    "# however it will always return true because it is determining whether\n",
+    "# the character 'c' is lowercase instead of the variable c\n",
+    "# therefore the function will always return true because 'c' is lowercase"
    ]
   },
   {
@@ -164,16 +303,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def any_lowercase3(s):\n",
     "    for c in s:\n",
     "        flag = c.islower()\n",
-    "    return flag"
+    "    return flag\n",
+    "\n",
+    "any_lowercase3('PAPAyA')\n",
+    "# This function does not work because it only determines whether the\n",
+    "# final character is upper or lower case"
    ]
   },
   {
@@ -185,17 +339,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def any_lowercase4(s):\n",
     "    flag = False\n",
     "    for c in s:\n",
     "        flag = flag or c.islower()\n",
-    "    return flag"
+    "    return flag\n",
+    "\n",
+    "any_lowercase4('PApaYA')\n",
+    "# This function works correctly\n",
+    "# If this function does not find a single occurance of a lowercase\n",
+    "# letter, the function will return false"
    ]
   },
   {
@@ -207,17 +377,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def any_lowercase5(s):\n",
     "    for c in s:\n",
     "        if not c.islower():\n",
     "            return False\n",
-    "    return True"
+    "    return True\n",
+    "\n",
+    "any_lowercase5('pApaya')\n",
+    "# This function does not work correctly\n",
+    "# This function wil determine whether there are any uppercase letters\n",
+    "# within the string\n",
+    "# the function's return true and return false should be swtiched"
    ]
   },
   {
@@ -234,14 +421,41 @@
     "## [Chapter 10.1 - 10.6](http://www.greenteapress.com/thinkpython/html/thinkpython011.html)\n",
     "\n",
     "You may want to review [state diagrams in Chapter 2](http://www.greenteapress.com/thinkpython/html/thinkpython003.html#toc13).\n",
-    "\n"
+    "\n",
+    "#### 10.1 \n",
+    "1. A list is a squence of values\n",
+    "2. strings are a sequence of characters\n",
+    "3. a list within a nother list is or an array\n",
+    "\n",
+    "#### 10.2\n",
+    "1. accessing indicies within a list are the same as accessing within a string\n",
+    "2. unlike strings lists are mutable meaning that list[5] = something works\n",
+    "\n",
+    "#### 10.3\n",
+    "1. a for loop is the most common way to traverse through a loop\n",
+    "2. syntax: for x in range(0, 10)\n",
+    "\n",
+    "#### 10.4\n",
+    "1. the operator + will concatonate lists\n",
+    "2. the operator * will repeat the items in a list x number of times\n",
+    "\n",
+    "#### 10.5\n",
+    "1. the slice operator also works with lists\n",
+    "2. the [:] will return the entire list with brackets\n",
+    "\n",
+    "#### 10.6\n",
+    "1. list.append(value) will add whatever value to the end of the list\n",
+    "2. list1.extend(list2) will combine the two lists together by adding list 2 onto list 1\n",
+    "3. list.sort() will rearrange the values within list in numerical order"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Quick check:** What type of items can be placed in a list?"
+    "**Quick check:** What type of items can be placed in a list?\n",
+    "\n",
+    "All types of values"
    ]
   },
   {
@@ -255,7 +469,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Quick check:** Give at least one similarity and one difference between lists and strings."
+    "**Quick check:** Give at least one similarity and one difference between lists and strings.\n",
+    "\n",
+    "A string and list both are a compilation of values put together"
    ]
   },
   {
@@ -276,12 +492,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.2"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def average(numbers):\n",
+    "    sum = 0.0\n",
+    "    for x in range(len(numbers)):\n",
+    "        sum += numbers[x]\n",
+    "    return sum/len(numbers)\n",
+    "\n",
+    "x = [1,3,4,6,7]\n",
+    "average(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -293,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -308,6 +544,12 @@
     "    ['burger with kale', 'salad with kale', 'ice cream with kale']\n",
     "    \n",
     "    \"\"\"\n",
+    "    new_menu = []\n",
+    "    for x in range(len(menu)):\n",
+    "        new_menu.append(menu[x] + ' with ' + ingredient)\n",
+    "        \n",
+    "    return new_menu\n",
+    "    \n",
     "    pass    # TODO: Implement me\n",
     "\n",
     "# Running doctests in jupyter notebook:\n",
@@ -315,8 +557,8 @@
     "# We use this slightly more complex method to test only the add_ingredient function,\n",
     "# without running tests on any other functions that may be in this notebook.\n",
     "\n",
-    "#import doctest\n",
-    "#doctest.run_docstring_examples(add_ingredient, globals())"
+    "import doctest\n",
+    "doctest.run_docstring_examples(add_ingredient, globals())"
    ]
   },
   {
