Turning in my day 4 reading journal

--- a/day4_reading_journal.ipynb
+++ b/day4_reading_journal.ipynb
@@ -21,7 +21,32 @@
     "## [Chapter 10](http://www.greenteapress.com/thinkpython/html/thinkpython011.html)\n",
     "\n",
     "You may want to review [state diagrams in Chapter 2](http://www.greenteapress.com/thinkpython/html/thinkpython003.html#toc13). [Python Tutor](http://pythontutor.com/) is also helpful for visualizing the state of your program.\n",
-    "\n"
+    "\n",
+    "#### 10.7\n",
+    "1. An augmented assignment statement is a shorter way to add onto a previous value (x += 1)\n",
+    "2. A program that adds onto a variable continually is called an accumulator\n",
+    "3. A program that combines values in a sequence is called a reducer\n",
+    "4. A filter will return a specific subset of a sequence\n",
+    "\n",
+    "#### 10.8\n",
+    "1. the method list.pop(1) will delete the value in the passed index\n",
+    "2. the method list.remove('b') will remove the passed in value from the list\n",
+    "3. the function del will remove the elements in slice from the list\n",
+    "\n",
+    "#### 10.9\n",
+    "1. list('string') will convert a string into a list\n",
+    "2. string.split(delimeter) will split at delimeter into a list \n",
+    "3. string.join(delimeter) will join the elements within a list with delimeter in between elements\n",
+    "\n",
+    "#### 10.10\n",
+    "1. objects can be equivalent but not identical whereas values can be identical\n",
+    "\n",
+    "#### 10.11\n",
+    "1. an object with more than one reference is aliased\n",
+    "2. aliases are used to tamper with a value while still keeping the original value\n",
+    "\n",
+    "#### 10.12\n",
+    "1. append modifies a list but the + operator creates a new list"
    ]
   },
   {
@@ -34,12 +59,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def middle(x):\n",
+    "    new_list = x\n",
+    "    del new_list[0]\n",
+    "    del new_list[len(new_list)-1]\n",
+    "    return new_list\n",
+    "\n",
+    "middle([0,1,2,3,4,5])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,12 +97,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def chop(x):\n",
+    "    del x[0]\n",
+    "    del x[len(x)-1]\n",
+    "    return None\n",
+    "\n",
+    "mylist = [1,2,3,4,5]\n",
+    "chop(mylist)\n",
+    "print mylist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Middle is a function that will return a new list that is a modified version of the passed in list whereas chop is a function that modifies the passed in list"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,12 +139,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_anagram(string1, string2):\n",
+    "    string1_value = get_string_value(string1)\n",
+    "    string2_value = get_string_value(string2)\n",
+    "    if string1_value == string2_value:\n",
+    "        return True    \n",
+    "    return False\n",
+    "\n",
+    "def get_string_value(string):\n",
+    "    value = 0\n",
+    "    for x in range(len(string)):\n",
+    "        value += ord(string[x])\n",
+    "    return value\n",
+    "\n",
+    "x = \"kin\"\n",
+    "y = \"ink\"\n",
+    "print is_anagram(x, y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,12 +185,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.522\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def has_duplicates(mylist):\n",
+    "    new_list = mylist\n",
+    "    new_list.sort()\n",
+    "    for x in range(0,len(new_list)-1):\n",
+    "        if new_list[x] == new_list[x+1]:\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "def get_bdays(a):\n",
+    "    x = []\n",
+    "    for z in range(a): \n",
+    "        x.append(random.randint(1,365))\n",
+    "    return x\n",
+    "\n",
+    "def find_bday_probability(students, simulations):\n",
+    "    count = 0.0\n",
+    "    for x in range(simulations):\n",
+    "        test = get_bdays(students)\n",
+    "        if has_duplicates(test):\n",
+    "            count += 1.0\n",
+    "    print count/simulations\n",
+    "\n",
+    "find_bday_probability(23, 1000)"
+   ]
   },
   {
    "cell_type": "markdown",
