Turning in journal for day 5

--- a/day5_reading_journal.ipynb
+++ b/day5_reading_journal.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -82,13 +82,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Section 4.3"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Excercise 1\n",
+    "\n",
+    "def square(t):\n",
+    "    for i in range(4):\n",
+    "        fd(t, 50)\n",
+    "        lt(t)\n",
+    "    wait_for_user()\n",
+    "    \n",
+    "world = TurtleWorld()\n",
+    "bob = Turtle()\n",
+    "square(bob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Exercise 2\n",
+    "\n",
+    "def square(t, length):\n",
+    "    for i in range(4):\n",
+    "        fd(t, length)\n",
+    "        lt(t)\n",
+    "    wait_for_user()\n",
+    "    \n",
+    "world = TurtleWorld()\n",
+    "bob = Turtle()\n",
+    "square(bob, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Exercise 3\n",
+    "\n",
+    "def polygon(t, length, n):\n",
+    "    for i in range(n):\n",
+    "        fd(t, length)\n",
+    "        lt(t, 360/n)\n",
+    "    wait_for_user()\n",
+    "    \n",
+    "world = TurtleWorld()\n",
+    "bob = Turtle()\n",
+    "polygon(bob, 5, 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 4\n",
+    "import math\n",
+    "\n",
+    "def circle(t, r):\n",
+    "    circum = 2.0*r*math.pi\n",
+    "    length = circum/20\n",
+    "    n = circum/length\n",
+    "    polygon(t, length, int(n))\n",
+    "\n",
+    "\n",
+    "world = TurtleWorld()\n",
+    "bob = Turtle()\n",
+    "bob.delay = 0.01\n",
+    "circle(bob, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Exercise 5\n",
+    "import math\n",
+    "\n",
+    "def arc(t, r, angle):\n",
+    "    circum = 2.0*r*math.pi*(angle/360.0)\n",
+    "    length = circum/20.0\n",
+    "    n = circum/length\n",
+    "    for i in range(int(n)):\n",
+    "        fd(t, length)\n",
+    "        lt(t, angle/n)\n",
+    "        \n",
+    "    wait_for_user()\n",
+    "\n",
+    "world = TurtleWorld()\n",
+    "bob = Turtle()\n",
+    "bob.delay = 0.01\n",
+    "arc(bob, 50, 245)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,13 +216,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "More fun"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise 5\n",
+    "\n",
+    "def spiral(t, n):\n",
+    "# a + b*theta\n",
+    "    theta = 0.0\n",
+    "    length = 5\n",
+    "    a = .01\n",
+    "    b = .0001\n",
+    "    for i in range(n):\n",
+    "        fd(t, length)\n",
+    "        new_theta = 1 / (a + b*theta)\n",
+    "        lt(t, new_theta)\n",
+    "        theta += new_theta\n",
+    "    wait_for_user()\n",
+    "    \n",
+    "world = TurtleWorld()\n",
+    "bob = Turtle()\n",
+    "bob.delay = 0.01\n",
+    "spiral(bob, 100)"
+   ]
   },
   {
    "cell_type": "markdown",
