Turning in reading journal for day 6

--- a/day6_reading_journal.ipynb
+++ b/day6_reading_journal.ipynb
@@ -23,14 +23,38 @@
     "[Python Tutor](http://pythontutor.com/) can be helpful for visualizing stack diagrams, including for recursive execution.\n",
     "\n",
     "Chapter 5 leads into Chapter 6, and all the required exercises for this reading are in the Chapter 6 section.\n",
-    "\n"
+    "\n",
+    "\n",
+    "#### 5.8\n",
+    "1. Recursion happens when a function calls itself\n",
+    "2. Recursion functions similarily to a for loop\n",
+    "\n",
+    "#### 5.9\n",
+    "1. stack diagrams can be useful for seeing what a recursive function will do each time it calls itself\n",
+    "\n",
+    "#### 5.10\n",
+    "1. Infinite recursion occurs when a function calls itself and it will continue to call itself infinitely.  The conditions to break out of the function will never be met\n",
+    "\n",
+    "#### 5.11\n",
+    "1. raw_input will get input from the keyboard and return it as a useable value\n",
+    "2. the sequence \\n will cause a line break"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Chapter 6.5 - 6.11](http://www.greenteapress.com/thinkpython/html/thinkpython007.html)"
+    "## [Chapter 6.5 - 6.11](http://www.greenteapress.com/thinkpython/html/thinkpython007.html)\n",
+    "\n",
+    "#### 6.5\n",
+    "1. Recursion is when a function calls itself and it will continue infinitely if no variables within the function change\n",
+    "\n",
+    "#### 6.6\n",
+    "1. The best way to think through a recursion function is to work through the first case and step through the program until the function calls itself for the first time\n",
+    "\n",
+    "#### 6.7\n",
+    "1. Checking instances can be used with the function isinstance(value, type)\n",
+    "2. the base case is the instance when the function will break out of recursion"
    ]
   },
   {
@@ -49,12 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 6.4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 90\n",
+      "8100\n"
+     ]
+    }
+   ],
    "source": [
     "def b(z):\n",
     "    prod = a(z, z)\n",
@@ -95,13 +128,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 6.6"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "\n",
+    ">>> is_palindrome(\"redivider\")\n",
+    "True\n",
+    "\n",
+    ">>> is_palindrome(\"bob\")\n",
+    "True\n",
+    "\n",
+    ">>> is_palindrome(\"ttta\")\n",
+    "False\n",
+    "\n",
+    ">>> is_palindrome(\"aaaaaaa\")\n",
+    "True\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "def first(word):\n",
+    "    return word[0]\n",
+    "\n",
+    "def last(word):\n",
+    "    return word[-1]\n",
+    "\n",
+    "def middle(word):\n",
+    "    return word[1:-1]\n",
+    "\n",
+    "def is_palindrome(word):\n",
+    "    mid = middle(word)\n",
+    "    if first(word) == last(word):    \n",
+    "        if mid[:] == mid[::-1]:\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "import doctest\n",
+    "doctest.testmod()\n",
+    "doctest.run_docstring_examples(is_palindrome, globals())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,13 +186,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 6.6 challenge"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aa\n",
+      "aba\n",
+      "aga\n",
+      "aha\n",
+      "ala\n",
+      "alula\n",
+      "ama\n",
+      "ana\n",
+      "anna\n",
+      "ava\n",
+      "awa\n",
+      "bib\n",
+      "bob\n",
+      "boob\n",
+      "bub\n",
+      "civic\n",
+      "dad\n",
+      "deed\n",
+      "deified\n",
+      "deked\n",
+      "deled\n",
+      "denned\n",
+      "dewed\n",
+      "did\n",
+      "dud\n",
+      "eke\n",
+      "eme\n",
+      "ere\n",
+      "eve\n",
+      "ewe\n",
+      "eye\n",
+      "gag\n",
+      "gig\n",
+      "hah\n",
+      "halalah\n",
+      "hallah\n",
+      "huh\n",
+      "kaiak\n",
+      "kayak\n",
+      "keek\n",
+      "kook\n",
+      "level\n",
+      "madam\n",
+      "marram\n",
+      "mem\n",
+      "mim\n",
+      "minim\n",
+      "mom\n",
+      "mum\n",
+      "noon\n",
+      "nun\n",
+      "oho\n",
+      "otto\n",
+      "pap\n",
+      "peep\n",
+      "pep\n",
+      "pip\n",
+      "poop\n",
+      "pop\n",
+      "pup\n",
+      "radar\n",
+      "redder\n",
+      "refer\n",
+      "reifier\n",
+      "repaper\n",
+      "reviver\n",
+      "rotator\n",
+      "rotor\n",
+      "sagas\n",
+      "sees\n",
+      "selles\n",
+      "sememes\n",
+      "semes\n",
+      "seres\n",
+      "sexes\n",
+      "shahs\n",
+      "sis\n",
+      "solos\n",
+      "sos\n",
+      "stets\n",
+      "tat\n",
+      "tenet\n",
+      "terret\n",
+      "tit\n",
+      "toot\n",
+      "tot\n",
+      "tut\n",
+      "vav\n",
+      "waw\n",
+      "wow\n",
+      "yay\n"
+     ]
+    }
+   ],
+   "source": [
+    "def first(word):\n",
+    "    return word[0]\n",
+    "\n",
+    "def last(word):\n",
+    "    return word[-1]\n",
+    "\n",
+    "def middle(word):\n",
+    "    return word[1:-1]\n",
+    "\n",
+    "def is_palindrome(word):\n",
+    "    mid = middle(word)\n",
+    "    if first(word) == last(word):    \n",
+    "        if mid[:] == mid[::-1]:\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "fin = open('words.txt')\n",
+    "for line in fin:\n",
+    "    word = line.strip()\n",
+    "    if is_palindrome(word):\n",
+    "        print word\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,13 +329,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 6.7"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_power(a,b):\n",
+    "    if a == b:\n",
+    "        return True\n",
+    "    test1 = a%b\n",
+    "    a = a/b\n",
+    "    if test1 == 0 and is_power(a,b):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "print is_power(126,2)\n",
+    "print is_power(128,2)"
+   ]
   },
   {
    "cell_type": "markdown",
