Turning in Reading Journal for Day 7

--- a/day7_reading_journal.ipynb
+++ b/day7_reading_journal.ipynb
@@ -18,21 +18,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Chapter 11](http://www.greenteapress.com/thinkpython/html/thinkpython012.html)\n"
+    "## [Chapter 11](http://www.greenteapress.com/thinkpython/html/thinkpython012.html)\n",
+    "\n",
+    "\n",
+    "#### 11.0\n",
+    "1. A dictionary is like a list but can have any value be an index\n",
+    "2. For example for a translator dictionary, the dictionary could have index \"one\" which maps to \"uno\"\n",
+    "3. The order of the values within the dictionary is unpredictable\n",
+    "4. len(dictionary) will return the number of key-value pairs\n",
+    "\n",
+    "#### 11.1\n",
+    "1. Different ways to perform a computation are called implementations\n",
+    "\n",
+    "#### 11.3\n",
+    "1. a lookup is referencing a key within the dictionary: d[k]\n",
+    "2. No syntax to do a reverse lookup\n",
+    "\n",
+    "#### 11.4\n",
+    "1. Lists and dictionaries cannot be used as keys because they are mutable\n",
+    "\n",
+    "#### 11.5\n",
+    "1. A memo is used to keep track of previously computed values\n",
+    "2. In the fibonacci example the previous numbers are stored in a dictionary to use later on\n",
+    "\n",
+    "#### 11.6\n",
+    "1. global variables exist outside of their functions\n",
+    "2. they can be used in any function\n",
+    "3. Variables in __main__ are considered to be global because they can be used in any function within a script\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Quick check:** In about one sentence using your own words, what is a dictionary?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
+    "**Quick check:** In about one sentence using your own words, what is a dictionary?\n",
+    "\n",
+    "A dictionary is similar to a list but instead of using integer values for indicies, it can use any value.  ex. {\"pickle\": 5, \"daniel\": \"Happy\"}"
    ]
   },
   {
@@ -61,21 +83,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 11.2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'h': 1, 'y': 1, 'p': 5}\n"
+     ]
+    }
+   ],
    "source": [
     "def histogram(s):\n",
     "    d = dict()\n",
     "    for c in s:\n",
-    "        if c not in d:\n",
-    "            d[c] = 1\n",
-    "        else:\n",
-    "            d[c] += 1\n",
-    "    return d"
+    "        d[c] = 1 + d.get(c, 0)\n",
+    "    return d\n",
+    "\n",
+    "print histogram('happy')"
    ]
   },
   {
@@ -92,18 +121,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 11.4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=3)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\"\"\"\n",
+    "\n",
+    ">>> d = {'a':1, 'b':2, 'c':5, 'd':2}\n",
+    ">>> print reverse_lookup(d,2)\n",
+    "['b', 'd']\n",
+    "\n",
+    ">>> print reverse_lookup(d,0)\n",
+    "[]\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
     "def reverse_lookup(d, v):\n",
+    "    key_list = []\n",
     "    for k in d:\n",
     "        if d[k] == v:\n",
-    "            return k\n",
-    "    raise ValueError"
+    "            key_list.append(k)\n",
+    "    return key_list\n",
+    "\n",
+    "import doctest\n",
+    "doctest.testmod()"
    ]
   },
   {
@@ -117,14 +172,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Quick check** What type of objects can be used as keys to a dictionary, i.e. what property must they have?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
+    "**Quick check** What type of objects can be used as keys to a dictionary, i.e. what property must they have?\n",
+    "\n",
+    "They can be any type of value (ex. str, int, char, float)"
    ]
   },
   {
@@ -145,13 +195,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 11.6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def levenshtein(s, len_s, t, len_t):\n",
+    "    memo = dict()\n",
+    "    key = str(len_s) + str(len_t)\n",
+    "    cost = 0\n",
+    "    if key in memo:\n",
+    "        return memo[key]\n",
+    "    if len_s == 0:\n",
+    "        memo[key] = len_t\n",
+    "        return len_t\n",
+    "    if len_t == 0:\n",
+    "        memo[key] = len_s\n",
+    "        return len_s\n",
+    "    if s[len_s-1] == t[len_t-1]:\n",
+    "        cost = 0\n",
+    "    else:\n",
+    "        cost = 1\n",
+    "        \n",
+    "    res =  min(levenshtein(s, len_s-1, t, len_t) + 1,\n",
+    "               levenshtein(s, len_s, t, len_t-1) + 1,\n",
+    "               levenshtein(s, len_s-1, t, len_t-1) + cost)\n",
+    "    memo[key] = res\n",
+    "    return res\n",
+    "\n",
+    "print levenshtein('bill', len('bill'), 'billion', len('billion'))\n",
+    "print levenshtein('bill', len('bill'), 'million', len('million'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,14 +244,34 @@
    "source": [
     "## [Chapter 12](http://www.greenteapress.com/thinkpython/html/thinkpython013.html)\n",
     "\n",
-    "**Quick check:** In about one sentence using your own words, what is a tuple?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
+    "**Quick check:** In about one sentence using your own words, what is a tuple?\n",
+    "\n",
+    "Tuples are a bunch of values seperated by commas\n",
+    "\n",
+    "#### 12.1\n",
+    "1. tuple('lupins') will seperate each char into a a comma seperated sequence\n",
+    "2. slices and indicies can be used with tuples\n",
+    "3. tuples can be concatonated\n",
+    "\n",
+    "#### 12.2\n",
+    "1. tuple assignments are implemented with the format a,b = b,a where a = b, and b = a\n",
+    "\n",
+    "#### 12.3\n",
+    "1. divmod takes two arguments and returns a tuple of two values\n",
+    "\n",
+    "#### 12.4\n",
+    "1. (*args) will take in an unlimited amount of arguments\n",
+    "\n",
+    "#### 12.5\n",
+    "1. zip wil take two or more sequences and turn them into a list of tubles where each element contains one element from each sequence\n",
+    "\n",
+    "#### 12.6\n",
+    "1. d.items() will will turn each key-value pair into a list of tuples\n",
+    "2. zip can also be used to create a dictionary ex. d = dict(zip('abc', range(3)))\n",
+    "\n",
+    "#### 12.7\n",
+    "1. when comparing tuples the first elements from each tuple are compared and then the second and then the third etc. until the values differ\n",
+    "2. the sort function does this"
    ]
   },
   {
@@ -199,13 +304,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 12.1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=2)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    ">>> print sumall(1,2,3,4,5)\n",
+    "15\n",
+    ">>> print sumall(4,6,1)\n",
+    "11\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "def sumall(*args):\n",
+    "    res = 0\n",
+    "    for i in args:\n",
+    "        res += i\n",
+    "    return res\n",
+    "\n",
+    "import doctest\n",
+    "doctest.testmod()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,13 +370,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 12 sort"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def sort_by_last_letter(words):\n",
+    "    \"\"\"\n",
+    "\n",
+    "    >>> words = 'swim', 'dance', 'pickle', 'happy'\n",
+    "    >>> print sort_by_last_letter(words)\n",
+    "    ['dance', 'pickle', 'swim', 'happy']\n",
+    "    \n",
+    "    >>> words = 'poop', 'icing', 'willem', 'scarf'\n",
+    "    >>> print sort_by_last_letter(words)\n",
+    "    ['scarf', 'icing', 'willem', 'poop']\n",
+    "\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
+    "    t = []\n",
+    "    for word in words:\n",
+    "        t.append((word[::-1], word))\n",
+    "        \n",
+    "    t.sort()\n",
+    "    \n",
+    "    res = []\n",
+    "    for char, word in t:\n",
+    "        res.append(word)\n",
+    "    return res\n",
+    "\n",
+    "import doctest\n",
+    "doctest.run_docstring_examples(sort_by_last_letter, globals())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -249,18 +413,12 @@
    "source": [
     "**Quick check** Give an example of when you might use each sequence type:\n",
     "\n",
-    "- tuple\n",
+    "- tuple (passing a sequence as an argument to a function)\n",
     "\n",
-    "- list\n",
+    "- list (want something mutable)\n",
     "\n",
-    "- string"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
+    "- string (want to use a sequence as a dictionary key)\n",
+    "\n"
    ]
   },
   {
@@ -279,13 +437,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 12.3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['p', 'y', 'h', 'a']\n",
+      "['p', 'y', 'i']\n",
+      "['l', 'o', 'h', 'e']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def histogram(s):\n",
+    "    d = dict()\n",
+    "    for c in s:\n",
+    "        d[c] = 1 + d.get(c, 0)\n",
+    "    return d\n",
+    "\n",
+    "def most_frequent(string):\n",
+    "    x = histogram(string)\n",
+    "    \n",
+    "    t = []\n",
+    "    for char in x:\n",
+    "        t.append((x[char], char))\n",
+    "    \n",
+    "    t.sort(reverse = True)\n",
+    "    \n",
+    "    res = []\n",
+    "    for freq, char in t:\n",
+    "        res.append(char)\n",
+    "    \n",
+    "    return res\n",
+    "    \n",
+    "\n",
+    "\n",
+    "print most_frequent('happy')\n",
+    "print most_frequent('pippy')\n",
+    "print most_frequent('hello')"
+   ]
   },
   {
    "cell_type": "markdown",
