Turning in completed journal for day 10

--- a/day10_reading_journal.ipynb
+++ b/day10_reading_journal.ipynb
@@ -18,7 +18,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Chapter 16](http://www.greenteapress.com/thinkpython/html/thinkpython017.html)\n"
+    "## [Chapter 16](http://www.greenteapress.com/thinkpython/html/thinkpython017.html)\n",
+    "\n",
+    "\n",
+    "#### Pure Functions\n",
+    "1. Pure functions do not modify any of the objects passed into its arguments\n",
+    "2. These functions will return a value that does not modify anything passed into it\n",
+    "\n",
+    "#### Modifiers\n",
+    "1. Modifiers are the opposite of pure fuctions\n",
+    "2. They will change the objects passed into its parameters\n",
+    "\n",
+    "#### Prototyping versus Planning\n",
+    "1. prototyping and fixing is an effective way to address uncomplex functions\n",
+    "2. Planned development is a more effective way to address complex functions\n",
+    "3. Planned development requires much more insight into the problem before actually writing the code\n",
+    "4. For example, identifying that the Time object is really a three digit number in base 60"
    ]
   },
   {
@@ -35,13 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 16.2"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def is_after(t1, t2):\n",
+    "    return t1.hour >= t2.hour and t1.minute >= t2.minute and t1.second >= t2.second"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -49,7 +67,28 @@
    "source": [
     "## [Chapter 17](http://www.greenteapress.com/thinkpython/html/thinkpython018.html)\n",
     "\n",
-    "In chapter 17 we finally have the tools to really put user-defined classes to work! In the exercises for this reading journal, we'll go back and add methods to your `Point` class from Chapter 15 to make it a lot easier to use."
+    "In chapter 17 we finally have the tools to really put user-defined classes to work! In the exercises for this reading journal, we'll go back and add methods to your `Point` class from Chapter 15 to make it a lot easier to use.\n",
+    "\n",
+    "#### Object-Oriented Features\n",
+    "1. Python is an object oriented programming language\n",
+    "2. Each object within the program relates to some concept in the real world\n",
+    "3. methods are functions associated with a particular class\n",
+    "4. methods do not relate to concepts in the real world; they are specific to the class\n",
+    "\n",
+    "#### Init Method within a Class\n",
+    "1. The init method is a method called when a object is instantiated\n",
+    "2. Initializes all parameters withing the object to a defined value\n",
+    "\n",
+    "#### Str Method within a Class\n",
+    "1. str methods in a class are ways to display your object in the proper format\n",
+    "2. python's built in print will return the location of the object in memory\n",
+    "\n",
+    "#### Type-Based Dispatch\n",
+    "1. Methods written for a specific class to allow for commands in python to work for classes\n",
+    "2. For example writing an add method to allow for the + operator to work for two objects in the same class\n",
+    "\n",
+    "#### Polymorphism\n",
+    "1. functions that work with several types"
    ]
   },
   {
@@ -66,13 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 17.2"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def __init___(self, x = 0, y = 0):\n",
+    "    self.x = x\n",
+    "    self.y = y"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,13 +131,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 17.3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point(object):\n",
+    "    def __init__(self, x = 0, y = 0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"({}, {})\".format(self.x, self.y)\n",
+    "    \n",
+    "test = Point()\n",
+    "print test"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,13 +172,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 17.4"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point(object):\n",
+    "    def __init__(self, x = 0, y = 0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"({}, {})\".format(self.x, self.y)\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        new_point = Point()\n",
+    "        new_point.x = self.x + other.x\n",
+    "        new_point.y = self.y + other.y\n",
+    "        return new_point\n",
+    "    \n",
+    "test1 = Point(1, 5)\n",
+    "test2 = Point(2, 3)\n",
+    "print test1 + test2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,13 +230,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 17.7"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Kangaroo object at 0x7f3b3632da50> with pouch contents:\n",
+      "    'wallet'\n",
+      "    'car keys'\n",
+      "    <__main__.Kangaroo object at 0x7f3b3d975ed0>\n",
+      "<__main__.Kangaroo object at 0x7f3b3d975ed0> with pouch contents:\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Kangaroo(object):\n",
+    "    \"\"\"a Kangaroo is a marsupial\"\"\"\n",
+    "    \n",
+    "    def __init__(self, contents=None):\n",
+    "        \"\"\"initialize the pouch contents; the default value is\n",
+    "        an empty list\"\"\"\n",
+    "        if contents == None:\n",
+    "            contents = []\n",
+    "        self.pouch_contents = contents\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        \"\"\"return a string representaion of this Kangaroo and\n",
+    "        the contents of the pouch, with one item per line\"\"\"\n",
+    "        t = [ object.__str__(self) + ' with pouch contents:' ]\n",
+    "        for obj in self.pouch_contents:\n",
+    "            s = '    ' + object.__str__(obj)\n",
+    "            t.append(s)\n",
+    "        return '\\n'.join(t)\n",
+    "\n",
+    "    def put_in_pouch(self, item):\n",
+    "        \"\"\"add a new item to the pouch contents\"\"\"\n",
+    "        self.pouch_contents.append(item)\n",
+    "\n",
+    "kanga = Kangaroo()\n",
+    "roo = Kangaroo()\n",
+    "kanga.put_in_pouch('wallet')\n",
+    "kanga.put_in_pouch('car keys')\n",
+    "kanga.put_in_pouch(roo)\n",
+    "\n",
+    "print kanga\n",
+    "print roo"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,7 +300,7 @@
     "solution": "Time spent"
    },
    "source": [
-    " "
+    "About 1 hour "
    ]
   },
   {
